# test

./: .env  pyproject.toml
config/: settings.py
shop/: admin.py  models.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: index.html
