[tool.poetry]
name = "gg"
version = "0.1.0"
description = "Rem gg"
authors = ["Sinilin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
python-dotenv = "^1.0.1"
psycopg-binary = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
